--- a/example/index.html
+++ b/example/index.html
@@ -29,5 +29,6 @@
   <body>
     <div id="app"><div id="loading_text"><h1>Loading...</h1></div></div>
     <script src="/js"></script>
+    <script>init("wasm")</script>
   </body>
 </html>
